# sighthouse

./: .env  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.hooks/: pre-commit
doc/: Makefile  frontend_hook.py  mkdocs.yml  package_hook.py
doc/docs/: index.md
doc/docs/api-reference/: client.md  core.md  frontend.md  index.md  pipeline.md
doc/docs/assets/css/: override-material.css
doc/docs/clients/: installation.md  quickstart.md
doc/docs/frontend/: installation.md  quickstart.md
doc/docs/signature-pipeline/: dev.md  how.md  installation.md  quickstart.md
docker/: build.sh  clean.sh  migrate-minio-to-rustfs.sh  publish-ghidra.sh  publish.sh
docker/docker-bsim-elasticsearch/: build.sh  cert.dockerfile  create-certs.yml  create-db.docker  create-db.sh  docker-compose.yml  elastic_bsim.dockerfile  instances.yml  launch.sh
docker/docker-bsim-postgres/: Dockerfile  build.sh  create_bsim_database.sh  docker-compose.yml  entrypoint.sh  pg_is_ready.sh  start.sh
docker/docker-ghidra/: Dockerfile  build.sh  docker-compose.yml  entrypoint.sh  start.sh
docker/docker-ghidra-python3/: Dockerfile  build.sh  docker-compose.yml
docker/docker-sighthouse/: Dockerfile.frontend  Dockerfile.pipeline  Dockerfile.sighthouse  build.sh  entrypoint.sh
docker/frontend/: README.md  docker-compose.yml  start.sh
docker/frontend/nginx/: nginx.conf
docker/full-pipeline/: README.md  docker-compose.yml  start.sh
docker/pipeline/: docker-compose.yml  pipeline.yml  start.sh
docker/testing-pipeline/: docker-compose.yml  pipeline.yml  start.sh
sighthouse-cli/: pyproject.toml
sighthouse-cli/src/sighthouse/cli/: __init__.py  logo.ans
sighthouse-client/: LICENSE  Makefile  Makefile.bat  pyproject.toml
sighthouse-client/src/sighthouse/client/: SightHouseClient.py  SightHouseClientBinja.py  SightHouseClientGhidra.py  SightHouseClientIDA.py  SightHouseClientRadare.py  __init__.py  cli.py  install_binja.py  install_ghidra.py  install_ida.py
sighthouse-client/tests/: test_user_plugin.py
sighthouse-core/: pyproject.toml
sighthouse-core/src/sighthouse/core/utils/: __init__.py  analyzer.py  api.py  database.py  repo.py
sighthouse-core/tests/: test_analyzer.py  test_database.py  test_repo.py  test_utils.py
sighthouse-frontend/: pyproject.toml
sighthouse-frontend/src/sighthouse/frontend/: bobross.py  cli.py  database.py  localapi.py  model.py  restapi.py  runner.py
sighthouse-frontend/src/sighthouse/frontend/ghidrascripts/: SightHouseFrontendScript.java
sighthouse-frontend/tests/: conftest.py  test_frontend_cli.py  test_frontend_database.py  test_localapi.py  test_restapi.py  test_runner.py
sighthouse-pipeline/: pyproject.toml
sighthouse-pipeline/src/sighthouse/pipeline/: cli.py  manage.py  package.py  parser.py  worker.py
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/AutotoolsCompiler/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/CmakeCompiler/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/GhidraAnalyzer/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/GitScrapper/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/LinuxKernelCompiler/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/PlatformIoCompiler/: __init__.py  __main__.py  dependency_directory.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/PlatformIoPreprocessor/: __init__.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/PlatformIoScrapper/: __init__.py  database.py  package.yml
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/uClibcCompiler/: __init__.py  package.yml  uClibc-ng.config
sighthouse-pipeline/src/sighthouse/pipeline/core_modules/uClibcPreprocessor/: __init__.py  package.yml
sighthouse-pipeline/tests/: test_manage.py  test_package.py  test_pipeline_cli.py  test_worker.py
(+1 files in other folders)
