[project]
name = "sighthouse.cli"
description = "CLI sighthouse functionality"
authors = [
  {name="Benoît FORGETTE aka MadSquirrel"},
  {name="Sami BABIGEON aka Fenrisfulsur"}
]
license = "MIT"
version = "1.0.0"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[project.scripts]
sighthouse = "sighthouse.cli:main"

[tool.setuptools.package-data]
"*" = ["logo.ans"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
